# DynamicWallpaper

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  update_server_docker.sh
assets/: index.html
client/: Cargo.toml
client/src/: main.rs
scripts/: install_arch_linux_systemctl.py  python_install.sh  update_wallpaper_feh.sh
server/: Cargo.toml
server/assets/: index.html
server/src/: main.rs
