[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap_derive = "4.5.13"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
