[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.124"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
chrono = "0.4.38"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
once_cell = "1.19.0"
tempfile = "3.12.0"
log = "0.4.22"
env_logger = "0.11.5"
convert_case = "0.6.0"
sha2 = "0.10.8"
hex = "0.4.3"
mime_guess = "2.0.5"
